<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="rick_and_login">Rick and Login</string>
    <string name="login">Login</string>
    <string name="invalid_email">Correo electrónico inválido</string>
    <string name="invalid_pass">La contraseña debe de ser al menos de 8 caracteres y contener al menos un número</string>
    <string name="wrong_data">Datos inválidos</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="next">Siguiente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">¡Adelante!</string>
    <string name="first_on_boarding">¡Puedes ver información sobre todos los episodios de tu serie favorita!</string>
    <string name="second_on_boarding">¡Puedes ver información sobre todos los personajes de tu serie favorita!</string>
    <string name="third_on_boarding">Modifica tu correo y contraseña en los ajustes de usuario</string>
    <string name="no_connection">No hay conexión a Internet</string>
    <string name="error_general">Error general</string>
    <string name="btn_save">Guardar</string>
    <string name="done">Hecho</string>
    <string name="logout">Cerrar sesión</string>
    <string name="cancel">Cancelar</string>
    <string name="confirmation">¿Estás seguro?</string>
    <string name="filter_live">Vivos</string>
    <string name="filter_dead">Muertos</string>
    <string name="filter_unknown">Desconocido</string>
    <string name="filter_all">Todos</string>
    <string name="filter_by">Filtrar por</string>
    <string name="search_episode">Nombre del episodio</string>
    <string name="accept">Aceptar</string>
    <string name="show_all_episodes">Mostrar todos</string>
    <string name="filter">Filtrar</string>
    <string name="profile">Perfil</string>
    <string name="id"><b>ID:</b> %1$s</string>
    <string name="name"><b>Nombre:</b> %1$s</string>
    <string name="status"><b>Estado:</b> %1$s</string>
    <string name="specie"><b>Especie:</b> %1$s</string>
    <string name="gender"><b>Género:</b> %1$s</string>
    <string name="type"><b>Tipo:</b> %1$s</string>
    <string name="origin"><b>Origen:</b> %1$s</string>
    <string name="location"><b>Localización:</b> %1$s</string>
    <string name="characters"><b>Personajes:</b> %1$s</string>
    <string name="episode"><b>Episodio:</b> %1$s</string>
    <string name="season"><b>Temporada:</b> %1$s</string>
    <string name="date"><b>Fecha:</b> %1$s</string>
    <string name="repeat_pass">Repetir contraseña</string>
    <string name="password_mismatch">Las contraseñas no coinciden</string>
    <string name="date_filter">Filtrar por fecha</string>
    <string name="pick_date">Selecciona dos fechas</string>
    <string name="first_date">Fecha 1</string>
    <string name="second_date">Fecha 2</string>
    <string name="reset">Resetear</string>
    <string name="error_date">Fechas inválidas</string>
</resources>