<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.rickandmorty.presentation.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_black"
        android:orientation="vertical"
        tools:context=".presentation.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_top_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rick_morty_font"
                    android:gravity="center"
                    android:text="@string/rick_and_login"
                    android:textColor="@color/login_title"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/default_padding"
            android:paddingTop="@dimen/text_top_padding"
            android:paddingRight="@dimen/default_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                app:helperText=""
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:orientation="vertical"
                app:helperText=""
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit_pass"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    app:passwordToggleEnabled="true"
                    style="@style/EditTextStyle"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_marginTop="@dimen/image_margin_top"
                android:layout_gravity="center"
                android:src="@drawable/rick_and_morty_no_background" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/login_background"
                android:layout_gravity="bottom"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black_white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</layout>